# Petra-M--RFP

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  testrelease.yml
python/petram/phys/common/: numba_zfunc.py  rf_dispersion_coldplasma.py  rf_dispersion_coldplasma_numba.py  rf_dispersion_lkplasma.py  rf_dispersion_lkplasma_numba.py  rf_lk_term_panel.py  rf_plasma_wc_wp.py  rf_stix_terms_panel.py
python/petram/phys/em1d/: em1d_coldplasma.py  em1d_lkplasma.py
python/petram/phys/em2d/: em2d_coldplasma.py  em2d_lkplasma.py
python/petram/phys/em2da/: em2da_coldplasma.py  em2da_lkplasma.py
python/petram/phys/em3d/: em3d_coldplasma.py  em3d_lkplasma.py
